fixed right modal style to prevent overflow from remaining when the modal is closed

--- a/css/main.css
+++ b/css/main.css
@@ -381,6 +381,7 @@ border-color: white;
 border-style: solid;
 background-color: #71AEEC;
 min-width: 35vw;
+max-width: 100vw;
 min-height: calc(100vh - 40px);
 color: white;
 display: flex;
